--- a/melissa.html
+++ b/melissa.html
@@ -5,7 +5,7 @@
 
     <title>Melissa's Page</title>
 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/melissa.css">
 </head>
 <body>
 	<h1>Melissa</h1>
