--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Assignment 1</title>
 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <h1>Hello</h1>
