--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Assignment 1</title>
+    <title>HELLO</title>
 
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
