--- a/spongebob.html
+++ b/spongebob.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Spongebob</h1>
     <div class="link">
-      <a href="index.html">Homepage!!!</a>
+      <a href="index.html">Go to Homepage</a>
     </div>
     <img src="img/spongebob.png" alt="sponge">
 
