--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Hello</h1>
     <div class="link">
-      <a href="melissa.html">Melissa!!!</a>
+      <a href="melissa.html">Melissa</a>
     </div>
     <img src="img/red-fox.jpeg" alt="fox">
 
