--- a/spongebob.html
+++ b/spongebob.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
-<head>
+<html>
+   <head>
     <!-- General meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -18,3 +18,4 @@
 
     
 </body>
+</html>
