added link to spongebob from index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="link">
       <a href="melissa.html">Melissa</a>
     </div>
+    <div class="link">
+      <a href="spongebob.html">Spongebob</a>
+    </div>
     <img src="img/red-fox.jpeg" alt="fox">
 
     
