added button to change color on spongebob page

--- a/spongebob.html
+++ b/spongebob.html
@@ -9,13 +9,14 @@
 
     <link rel="stylesheet" type="text/css" href="css/spongebob.css">
 </head>
-<body>
+<body style="color: blue;">
     <h1>Spongebob</h1>
     <div class="link">
       <a href="index.html">Go to Homepage</a>
     </div>
     <img src="img/spongebob.png" alt="sponge">
+    <button onclick="changeColor()">Change Color</button>
 
-    
+    <script src="script.js"></script> 
 </body>
 </html>
