modified files for today's class

--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-    <h1>Hello</h1>
-    <div class="link">
-      <a href="melissa.html">Melissa</a>
-    </div>
-    <div class="link">
-      <a href="spongebob.html">Spongebob</a>
-    </div>
-    <img src="img/red-fox.jpeg" alt="fox">
-
+    <h1>Hello, World!</h1>
+    <a href="melissa.html">Melissa</a>
+    <a href="spongebob.html">Spongebob</a>
     
 </body>
