--- a/melissa.html
+++ b/melissa.html
@@ -9,8 +9,20 @@
 </head>
 <body>
 	<h1>Melissa</h1>
-	<h3>Favorite color: Orange</h3>
-	<h3>Favorite animal: Fox</h3>
-	<h3 id="fav-num">Favorite number: 1</h3>
+	<table>
+		<tr>
+			<td> <img src="img/numberone.png" style="height:200px;"/> </td>
+			<td> <img src="img/red-fox.jpeg" style="height: 200px;"/> </td>
+			<td> <img src="img/orange.png" style="height:200px;"/> </td>
+		</tr>
+		<tr>
+			<td> <p>Number</p> </td>
+			<td> <p>Animal</p> </td>
+			<td> <p>Color</p> </td>
+		</tr>
+	</table>
+
 	<a href="index.html">Back to Home</a>
+
+	
 </body>
