--- a/spongebob.html
+++ b/spongebob.html
@@ -11,11 +11,12 @@
 </head>
 <body style="color: blue;">
     <h1>Spongebob</h1>
-    <div class="link">
-      <a href="index.html">Go to Homepage</a>
+    <div id="div-id" class="div-class" style="background-color: linen">
+      Who lives in a pineapple under the sea?
     </div>
     <img src="img/spongebob.png" alt="sponge">
     <button onclick="changeColor()">Change Color</button>
+    <a href="index.html">Homepage</a>
 
     <script src="script.js"></script> 
 </body>
